# pip-cache-issue

foo/: pyproject.toml  setup.py
foo-bar/: pyproject.toml
